test/2/label-mismatch.err
type error: test/2/label-mismatch.ploy:3:14-22: argument struct field #1 has label `k`; expected label `j`. actual type: (i:Int k:Int); expected type: (i:Int j:Int).
  main = exit.f(i=0 k=1)
               ~~~~~~~~~
